[package]
name = "l1x-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
secp256k1 = { workspace = true }

# Dependencies from L1X crates
l1x-rpc = { workspace = true }
l1x-common = { workspace = true }
