[package]
name = "l1x-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
sha3 = { workspace = true }
ethers = { workspace = true }
hex-literal = { workspace = true }
k256 = { workspace = true }
secp256k1 = { workspace = true }
reqwest = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }

# Dependencies from L1X crates
l1x-rpc = { workspace = true }
